# payment-ledger-api

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  compose.yaml  coverage.xml  fly.toml  locustfile.py  main.py  pyproject.toml
.github/workflows/: ci.yml  health-monitor.yml
alembic/: env.py
alembic/versions/: 20260506_0953_186facffe789_add_entries_table.py  20260506_1631_3b594199520d_create_accounts_and_transactions_tables.py  20260514_0900_add_entries_table.py  20260514_1536_9004f7203189_redesign_schema.py  20260515_1158_93308e79538d_add_timezone_support_to_transaction_.py  20260515_1246_16a56d0ebbb7_add_timezone_support_to_account_.py  20260518_1648_41ff59639a17_add_users_table.py  20260526_1442_6f551deab5c7_add_currencies_and_exchange_rates_tables.py  20260527_1041_b067e55bdcf4_add_converted_amount_usd_to_entries.py  20260529_1736_84f338966fc8_add_audit_logs_table.py  20260609_1156_ee54b717aba2_change_entry_amount_to_bigint.py  20260618_1856_d117489c7a4b_add_currency_fk_to_accounts_entries.py  20260623_1400_dba49c02eafb_add_balance_check_constraint_trigger.py  20260627_1457_a7360f10e600_change_transactions_metadata_to_jsonb.py
app/: main.py
app/core/: cache.py  config.py  deps.py  exceptions.py  logging.py  redis.py  security.py  telemetry.py
app/db/: session.py
app/dependencies/: idempotency.py
app/middleware/: logging.py
app/models/: __init__.py  account.py  audit_log.py  currency.py  entry.py  exchange_rate.py  transaction.py  user.py
app/repositories/: __init__.py  account_repository.py  audit_repository.py  currency_repository.py  ledger_repository.py  transaction_repository.py  user_repository.py
app/schemas/: account.py  audit_log.py  auth.py  currency.py  ledger.py  token.py  transaction.py  user.py
app/services/: account_service.py  audit_service.py  balance.py  currency_service.py  ledger_service.py  transaction_service.py  user_service.py
docs/: pre-pytest-checklist.md  tech-debt.md
docs/adr/: 001-redis-for-idempotency-key.md  002-adopt-claude-code-with-pair-programming-mode.md  002-concurrency-strategy.md  003-transaction-date-as-accounting-date.md  004-money-as-bigint-minor-units.md  005-transaction-status-lifecycle.md  006-jwt-claims-no-db-per-request.md  007-deferred-balance-constraint-trigger.md
docs/learning-notes/: fix-idempotency-cache-commit-boundary.md  pre-s6-cleanup-group-a.md  s2-10-integration-check-refactor.md  s2-4-td001-fixture-debug.md  s2-5-get-accounts-id-balance.md  s2-6-balance-query-sqlalchemy.md  s2-7-transaction-validation-tests.md  s2-8-idempotency-balance-tests.md  s2-9-coverage-test-completion.md  s3-1-user-model-alembic-migration.md  s3-2-password-hash-user-create.md  s3-3-jwt-login-endpoint.md  s3-4-get-current-user-dependency.md  s3-5-role-based-access-control.md  s3-6-authenticated-conftest.md  s3-7-auth-coverage.md  s5-7-mypy-strict.md  (+42 more)
monitoring/: prometheus.yml
scripts/: seed_demo_user.py
tests/: conftest.py  test_accounts.py  test_audit_log.py  test_audit_logs_endpoint.py  test_auth.py  test_auth_dependency.py  test_balance.py  test_balance_cache.py  test_balance_invariant_hypothesis.py  test_currencies.py  test_currency_conversion.py  test_fx_rounding_unit.py  test_health.py  test_idempotency.py  test_ledger.py  test_metrics.py  test_middleware_logging.py  test_observability_config.py  test_rbac.py  test_security.py  test_transactions.py  test_transactions_http.py  test_transactions_multi_currency.py  test_users.py
(+45 files in other folders)
