[project]
name = "payment-ledger-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic-settings>=2.3",
  "psycopg[binary]>=3.3.4",
  "python-dotenv>=1.2.2",
  "redis[hiredis]>=5.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "testcontainers[postgres]>=4.8",
  "anyio>=4.4",
  "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
link-mode = "copy"
