[project]
name = "payment-ledger-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115",
  "sqlalchemy[asyncio]>=2.0.51",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic-settings>=2.3",
  "psycopg[binary]>=3.3.4",
  "python-dotenv>=1.2.2",
  "redis[hiredis]>=5.0",
  "bcrypt>=5.0.0",
  "python-jose[cryptography]>=3.5.0",
  "structlog>=26.1.0",
  "opentelemetry-sdk>=1.42.1",
  "opentelemetry-instrumentation-fastapi>=0.63b1",
  "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
  "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "testcontainers[postgres]>=4.8",
  "anyio>=4.4",
  "pytest-cov>=7.1.0",
  "ruff>=0.9",
  "mypy>=2.1.0",
  "pip-audit>=2.10.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "UP042"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.uv]
link-mode = "copy"
