[project]
name = "payment-ledger-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.139.0",
  "sqlalchemy[asyncio]>=2.0.51",
  "asyncpg>=0.29",
  "alembic>=1.18.5",
  "pydantic-settings>=2.14.2",
  "psycopg[binary]>=3.3.4",
  "python-dotenv>=1.2.2",
  "redis[hiredis]>=8.0.1",
  "bcrypt>=5.0.0",
  "structlog>=26.1.0",
  "opentelemetry-sdk>=1.42.1",
  "opentelemetry-instrumentation-fastapi>=0.64b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.64b0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
  "pyjwt>=2.13.0",
  "python-multipart>=0.0.32",
  "prometheus-fastapi-instrumentator>=8.0.2",
]

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "httpx>=0.27",
  "testcontainers[postgres]>=4.8",
  "anyio>=4.14.1",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.20",
  "mypy>=2.1.0",
  "pip-audit>=2.10.1",
  "poethepoet>=0.48.0",
  "hypothesis>=6.156.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["app"]
core = "sysmon"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "UP042"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy app/"
check = { sequence = ["format", "lint", "typecheck"] }

[tool.uv]
link-mode = "copy"
